Address null check.